Implemented Google OAuth login (#7)

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="mysql://root:password@localhost:3306/drivemerge"
 JWT_SECRET="a_long_random_secret_here"
 PORT=3000
+GOOGLE_CLIENT_ID="8711953527635-ug29ncn6r8shskt1pe3lgqu19pip4a8.apps.googleusercontent.com"
