--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write .", 
+    "format": "prettier --write .",
     "postinstall": "prisma generate"
   },
   "keywords": [],
@@ -24,7 +24,8 @@
     "google-auth-library": "^10.5.0",
     "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
