Fix: file history + multifile upload + progress + preview/download

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "sharp": "^0.34.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
