--- a/server/package.json
+++ b/server/package.json
@@ -17,15 +17,18 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.8.0",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^164.1.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "sharp": "^0.34.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
